<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a4">

    <LinearLayout

        android:id="@+id/taskCreationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"


        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/googlesans_bold"
            android:text="Nouvelle Tâche"
            android:textColor="@color/ColorWhite"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/task_name_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/googlesans_bold"
            android:text="@string/tache_nom"
            android:textColor="@color/ColorWhite"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_name_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/ColorYellow"
            app:boxStrokeColor="@color/ColorYellow"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/task_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:hint="Nom de la tâche"
                android:inputType="text"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorYellow" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/task_deadline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/googlesans_bold"
            android:text="Deadline:"
            android:textColor="@color/ColorWhite"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_deadline_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/ColorYellow"
            app:boxStrokeColor="@color/ColorYellow"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/task_deadline_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/task_name_text"
                android:layout_marginTop="7dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="delais"
                android:inputType="none"
                android:onClick="onDeadlinePick"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorYellow" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/department_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/googlesans_bold"
            android:text="@string/tache_desc"
            android:textColor="@color/ColorWhite"

            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_description_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/ColorYellow"
            app:boxStrokeColor="@color/ColorYellow"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/department_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="21dp"
                android:gravity="top|start"
                android:hint="details de la tâche"
                android:inputType="textMultiLine"
                android:textColor="@color/ColorWhite"
                android:textColorHint="@color/ColorYellow" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/choose_department_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/googlesans_bold"
            android:text="@string/choose_department"
            android:textColor="@color/ColorWhite"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/departmentDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/ColorYellow"
            android:contentDescription="@string/department_drop_down"
            android:gravity="start"
            android:saveEnabled="false"
            android:textAlignment="textStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/googlesans_bold"
            android:text="@string/choose_employees"
            android:textColor="@color/ColorWhite"
            android:textSize="17sp" />

        <ListView
            android:id="@+id/employees_List"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:nestedScrollingEnabled="true"
            android:theme="@android:style/Widget.ListView" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>